Changed application-prod.properties to contain prod db info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ logging.level.org.springframework.security=DEBUG
 spring.security.user.name=sanket
 spring.security.user.password=sanket
 
-spring.profiles.active=dev
+spring.profiles.active=prod
